# serializer version: 1
# name: test_publish_example_dry_run
  dict({
    'exit_code': 0,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-5803604b'...
      Published 'example_5803604b-0.0.0.tar.gz'
      Published 'example_5803604b_a-1.0.0-py3-none-any.whl'
      Published 'example_5803604b_a-1.0.0.tar.gz'
      Published 'example_5803604b_b-1.0.0-py3-none-any.whl'
      Published 'example_5803604b_b-1.0.0.tar.gz'
      Published 'example_5803604b_b-2.0.0-py3-none-any.whl'
      Published 'example_5803604b_b-2.0.0.tar.gz'
      Published 'example_5803604b_b-3.0.0-py3-none-any.whl'
      Published 'example_5803604b_b-3.0.0.tar.gz'
  
    ''',
    'stdout': '''
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_5803604b-0.0.0.tar.gz
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_5803604b_a-1.0.0-py3-none-any.whl
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_5803604b_a-1.0.0.tar.gz
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_5803604b_b-1.0.0-py3-none-any.whl
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_5803604b_b-1.0.0.tar.gz
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_5803604b_b-2.0.0-py3-none-any.whl
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_5803604b_b-2.0.0.tar.gz
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_5803604b_b-3.0.0-py3-none-any.whl
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_5803604b_b-3.0.0.tar.gz
      example-5803604b
  
    ''',
  })
# ---
# name: test_publish_example_no_credentials
  dict({
    'exit_code': 1,
    'stderr': '''
      No credentials found for publish!
      Provide an API token via `PACKSE_PUBLISH_PASSWORD` or disable authentication with `--anonymous`.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_publish_example_no_username_defaults_to_token
  dict({
    'exit_code': 0,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-5803604b'...
      Published example_5803604b-0.0.0.tar.gz in [TIME]:
      
          <mock twine logs>
      
      Published 'example_5803604b-0.0.0.tar.gz'
      Published example_5803604b_a-1.0.0-py3-none-any.whl in [TIME]:
      
          <mock twine logs>
      
      Published 'example_5803604b_a-1.0.0-py3-none-any.whl'
      Published example_5803604b_a-1.0.0.tar.gz in [TIME]:
      
          <mock twine logs>
      
      Published 'example_5803604b_a-1.0.0.tar.gz'
      Published example_5803604b_b-1.0.0-py3-none-any.whl in [TIME]:
      
          <mock twine logs>
      
      Published 'example_5803604b_b-1.0.0-py3-none-any.whl'
      Published example_5803604b_b-1.0.0.tar.gz in [TIME]:
      
          <mock twine logs>
      
      Published 'example_5803604b_b-1.0.0.tar.gz'
      Published example_5803604b_b-2.0.0-py3-none-any.whl in [TIME]:
      
          <mock twine logs>
      
      Published 'example_5803604b_b-2.0.0-py3-none-any.whl'
      Published example_5803604b_b-2.0.0.tar.gz in [TIME]:
      
          <mock twine logs>
      
      Published 'example_5803604b_b-2.0.0.tar.gz'
      Published example_5803604b_b-3.0.0-py3-none-any.whl in [TIME]:
      
          <mock twine logs>
      
      Published 'example_5803604b_b-3.0.0-py3-none-any.whl'
      Published example_5803604b_b-3.0.0.tar.gz in [TIME]:
      
          <mock twine logs>
      
      Published 'example_5803604b_b-3.0.0.tar.gz'
  
    ''',
    'stdout': '''
      example-5803604b
  
    ''',
  })
# ---
# name: test_publish_example_twine_fails_with_already_exists
  dict({
    'exit_code': 1,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-5803604b'...
      Publish for 'example_5803604b-0.0.0.tar.gz' already exists.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_publish_example_twine_fails_with_rate_limit
  dict({
    'exit_code': 1,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-5803604b'...
      Publish of 'example_5803604b-0.0.0.tar.gz' failed due to rate limits.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_publish_example_twine_fails_with_unknown_error
  dict({
    'exit_code': 1,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-5803604b'...
      Publishing example_5803604b-0.0.0.tar.gz with twine failed:
          <twine error message>
      .
  
    ''',
    'stdout': '',
  })
# ---
# name: test_publish_example_twine_succeeds
  dict({
    'exit_code': 0,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-5803604b'...
      Published example_5803604b-0.0.0.tar.gz in [TIME]:
      
          <twine happy message>
      
      Published 'example_5803604b-0.0.0.tar.gz'
      Published example_5803604b_a-1.0.0-py3-none-any.whl in [TIME]:
      
          <twine happy message>
      
      Published 'example_5803604b_a-1.0.0-py3-none-any.whl'
      Published example_5803604b_a-1.0.0.tar.gz in [TIME]:
      
          <twine happy message>
      
      Published 'example_5803604b_a-1.0.0.tar.gz'
      Published example_5803604b_b-1.0.0-py3-none-any.whl in [TIME]:
      
          <twine happy message>
      
      Published 'example_5803604b_b-1.0.0-py3-none-any.whl'
      Published example_5803604b_b-1.0.0.tar.gz in [TIME]:
      
          <twine happy message>
      
      Published 'example_5803604b_b-1.0.0.tar.gz'
      Published example_5803604b_b-2.0.0-py3-none-any.whl in [TIME]:
      
          <twine happy message>
      
      Published 'example_5803604b_b-2.0.0-py3-none-any.whl'
      Published example_5803604b_b-2.0.0.tar.gz in [TIME]:
      
          <twine happy message>
      
      Published 'example_5803604b_b-2.0.0.tar.gz'
      Published example_5803604b_b-3.0.0-py3-none-any.whl in [TIME]:
      
          <twine happy message>
      
      Published 'example_5803604b_b-3.0.0-py3-none-any.whl'
      Published example_5803604b_b-3.0.0.tar.gz in [TIME]:
      
          <twine happy message>
      
      Published 'example_5803604b_b-3.0.0.tar.gz'
  
    ''',
    'stdout': '''
      example-5803604b
  
    ''',
  })
# ---
# name: test_publish_example_twine_succeeds_parallel
  dict({
    'exit_code': 0,
    'stderr': '<not included>',
    'stdout': '''
      example-5803604b
  
    ''',
  })
# ---
